# nanogui-rust-sdl

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: Cargo.toml
examples/src/: test.rs
src/: common.rs  label.rs  layout.rs  mod.rs  resources.rs  screen.rs  theme.rs  widget.rs  widget_container.rs  window.rs
tests/: common_tests.rs  layout_tests.rs  widget_tests.rs
