[package]
name = "nanogui-rust-sdl"
version = "0.1.0"
authors = ["Michael de Lang <kingoipo@gmail.com>"]
build = "build.rs"

[lib]
name = "nanoguirustsdl"
path = "src/mod.rs"

[dependencies]
sdl2 = "0.22"
sdl2-sys = "0.22"
gl = "*"
interpolate_idents = "*"

[dependencies.nanovg]
git = "https://github.com/Oipo/nanovg-rs"
#TODO when nanovg doesn't return valid ptr, make nanovg-rs panic
#path = "../nanovg-rs-oipo"
features = ["gl3"]

[build-dependencies]
gl_generator = "0.5.0"
khronos_api = "1.0.0"

[features]
default = []
draw-widget-box = []
