[package]
name = "nanogui-rust-sdl-examples"
version = "0.1.0"
authors = ["Michael de Lang <kingoipo@gmail.com>"]

[[bin]]
name = "example"
path = "src/test.rs"

[dependencies]
sdl2 = "0.22"
sdl2-sys = "0.22"
nanogui-rust-sdl = { path = "..", default-features = false, features = ["draw-widget-box"] }
gl = "*"

[dependencies.nanovg]
git = "https://github.com/Oipo/nanovg-rs"
features = ["gl3"]
